--- a/.env.renkx
+++ b/.env.renkx
@@ -49,7 +49,7 @@ NGINX_INSTALL_APPS=
 DOMAIN_BBWAPI=bbwapi.f.jobuse.cn
 DOMAIN_JDJSJAPI=jdjsjapi.f.jobuse.cn
 DOMAIN_AKITADOAPI=akitadoapi.f.jobuse.cn
-DOMAIN_YUNDINGAPI=yundingapi.f.jobuse.cn
+DOMAIN_YD_API=ydapi.f.jobuse.cn
 
 #
 # PHP7
@@ -103,7 +103,31 @@ PHP8_LOG_DIR=../renkxlogs/php8
 PHP8_UID=1008
 PHP8_GID=1008
 PHP8_EXTENSIONS=pdo_mysql,mysqli,mbstring,gd,curl,opcache,redis,bcmath,soap,xsl,xmlrpc,zip,pdo_dblib,pdo_sqlsrv,sockets,shmop,pcntl,gettext,mongodb
-PHP8_COMMAND=su -m www-data -c '/usr/local/bin/php /www/yunding/yunding-api/artisan octane:start --host=0.0.0.0 --port=9000'
+PHP8_COMMAND=su -m www-data -c '/usr/local/bin/php /www/wwwroot/artisan octane:start --host=0.0.0.0 --port=9000'
+
+#
+# 云鼎 api
+#
+YD_API_WWWROOT_DIR=~/code/app/yunding/yunding-api
+YD_API_PHP_CONF_FILE=./renkxservices/yd_api/php.ini
+YD_API_FPM_CONF_FILE=./renkxservices/yd_api/php-fpm.conf
+YD_API_LOG_DIR=../renkxlogs/yd_api
+
+#
+# 云鼎 crontab
+#
+YD_CRONTAB_PHP_LOG_DIR=./renkxlogs/crontab8
+YD_CRONTAB_ROOT_FILE=./renkxservices/yd_crontab/root
+
+#
+# 云鼎 horizon
+#
+YD_HORIZON_PHP_LOG_DIR=./renkxlogs/yd_horizon
+
+#
+# yd_ws json配置
+#
+YD_WS_CONF_JSON=~/code/renkx/docker/dnmpconfig/ws/yd_ws/laravel-echo-server.json
 
 #
 # MySQL8
@@ -147,9 +171,6 @@ JDJSJWS_CONF_JSON=~/code/renkx/docker/dnmpconfig/ws/jdjsjws/laravel-echo-server.
 # akitadows json配置
 AKITADOWS_CONF_JSON=~/code/renkx/docker/dnmpconfig/ws/akitadows/laravel-echo-server.json
 
-# yundingws json配置
-YUNDINGWS_CONF_JSON=~/code/renkx/docker/dnmpconfig/ws/yundingws/laravel-echo-server.json
-
 # root用户的.gitconfig文件
 ROOT_GITCONFIG_FILE=~/code/renkx/docker/dnmpconfig/git/gitconfig
 
@@ -163,14 +184,6 @@ SUPERVISOR_PHP_LOG_DIR=./renkxlogs/supervisor
 SUPERVISOR_CONFIG=~/code/renkx/docker/dnmpconfig/supervisor/conf.d/
 SUPERVISOR_LOG=./renkxlogs/supervisor
 SUPERVISOR_CONF_FILE=./renkxservices/supervisor/supervisord.conf
-
-#
-# supervisor8 基于php8
-#
-SUPERVISOR8_PHP_LOG_DIR=./renkxlogs/supervisor8
-SUPERVISOR8_CONFIG=~/code/renkx/docker/dnmpconfig/supervisor8/conf.d/
-SUPERVISOR8_LOG=./renkxlogs/supervisor8
-SUPERVISOR8_CONF_FILE=./renkxservices/supervisor8/supervisord.conf
 
 #
 # crontab
