--- a/.env.renkx
+++ b/.env.renkx
@@ -108,7 +108,7 @@ PHP8_COMMAND=su -m www-data -c '/usr/local/bin/php /www/wwwroot/artisan octane:s
 #
 # 云鼎 api
 #
-YD_API_WWWROOT_DIR=~/code/app/yunding/yunding-api
+YD_API_WWWROOT_DIR=~/code/app/yd/yd-api
 YD_API_PHP_CONF_FILE=./renkxservices/yd_api/php.ini
 YD_API_FPM_CONF_FILE=./renkxservices/yd_api/php-fpm.conf
 YD_API_LOG_DIR=../renkxlogs/yd_api
