--- a/.env.renkx
+++ b/.env.renkx
@@ -103,7 +103,6 @@ PHP8_LOG_DIR=../renkxlogs/php8
 PHP8_UID=1008
 PHP8_GID=1008
 PHP8_EXTENSIONS=pdo_mysql,mysqli,mbstring,gd,curl,opcache,redis,bcmath,soap,xsl,xmlrpc,zip,pdo_dblib,pdo_sqlsrv,sockets,shmop,pcntl,gettext,mongodb
-PHP8_COMMAND=su -m www-data -c '/usr/local/bin/php /www/wwwroot/artisan octane:start --host=0.0.0.0 --port=9000'
 
 #
 # 云鼎 api
@@ -112,12 +111,15 @@ YD_API_WWWROOT_DIR=~/code/app/yd/yd-api
 YD_API_PHP_CONF_FILE=./renkxservices/yd_api/php.ini
 YD_API_FPM_CONF_FILE=./renkxservices/yd_api/php-fpm.conf
 YD_API_LOG_DIR=../renkxlogs/yd_api
+YD_API_COMMAND=/usr/local/bin/php /www/wwwroot/artisan octane:start --host=0.0.0.0 --port=9000
 
 #
 # 云鼎 crontab
 #
-YD_CRONTAB_PHP_LOG_DIR=./renkxlogs/crontab8
-YD_CRONTAB_ROOT_FILE=./renkxservices/yd_crontab/root
+YD_CRONTAB_PHP_LOG_DIR=./renkxlogs/yd_crontab
+YD_CRONTAB_FILE=./renkxservices/yd_crontab/www-data
+YD_CRONTAB_SUPERVISOR_INI=./renkxservices/yd_crontab/crontab.ini
+YD_CRONTAB_SUPERVISOR_CONF_FILE=./renkxservices/yd_crontab/supervisord.conf
 
 #
 # 云鼎 horizon
