--- a/docker-compose.renkx.yml
+++ b/docker-compose.renkx.yml
@@ -71,6 +71,9 @@ services:
     container_name: yd_api
     hostname: yd_api
     working_dir: /www/wwwroot
+    user: www-data:www-data
+    # docker stop 往容器主进程发送的信号
+    stop_signal: SIGTERM
     volumes:
       - ${YD_API_WWWROOT_DIR}:/www/wwwroot/
       - ${SYS_DIR}:/renkxsys/
@@ -80,12 +83,12 @@ services:
       - ${COMPOSER_CACHE_DIR}:/tmp/composer/cache
       - ${COMPOSER_AUTH_JSON}:/tmp/composer/auth.json
       - ${COMPOSER_CONFIG_JSON}:/tmp/composer/config.json
-      - ${ROOT_GITCONFIG_FILE}:/root/.gitconfig
-      - ${ROOT_SSH_DIR}:/root/.ssh
+      - ${ROOT_GITCONFIG_FILE}:/home/www-data/.gitconfig
+      - ${ROOT_SSH_DIR}:/home/www-data/.ssh
     restart: always
     cap_add:
       - SYS_PTRACE
-    command: "${PHP8_COMMAND}"
+    command: "${YD_API_COMMAND}"
     networks:
       - default
 
@@ -96,20 +99,24 @@ services:
     container_name: yd_crontab
     hostname: yd_crontab
     working_dir: /www/wwwroot
+    user: www-data:www-data
+    # docker stop 往容器主进程发送的信号
+    stop_signal: SIGTERM
     volumes:
       - ${YD_API_WWWROOT_DIR}:/www/wwwroot/
       - ${SYS_DIR}:/renkxsys/
       - ${YD_API_PHP_CONF_FILE}:/usr/local/etc/php/php.ini
       - ${YD_API_FPM_CONF_FILE}:/usr/local/etc/php-fpm.d/www.conf
       - ${YD_CRONTAB_PHP_LOG_DIR}:/var/log/php
-      - ${YD_CRONTAB_ROOT_FILE}:/etc/crontabs/root
-      - ./renkxservices/yd_crontab/crontab.ini:/etc/supervisor/conf.d/crontab.ini
-      - ./renkxservices/yd_crontab/supervisord.conf:/etc/supervisor/supervisord.conf
+      - ${YD_CRONTAB_FILE}:/etc/crontabs/www-data
+      - ${YD_CRONTAB_PHP_LOG_DIR}:/var/log/supervisor/
+      - ${YD_CRONTAB_SUPERVISOR_INI}:/etc/supervisor/conf.d/crontab.ini
+      - ${YD_CRONTAB_SUPERVISOR_CONF_FILE}:/etc/supervisor/supervisord.conf
       - ${COMPOSER_CACHE_DIR}:/tmp/composer/cache
       - ${COMPOSER_AUTH_JSON}:/tmp/composer/auth.json
       - ${COMPOSER_CONFIG_JSON}:/tmp/composer/config.json
-      - ${ROOT_GITCONFIG_FILE}:/root/.gitconfig
-      - ${ROOT_SSH_DIR}:/root/.ssh
+      - ${ROOT_GITCONFIG_FILE}:/home/www-data/.gitconfig
+      - ${ROOT_SSH_DIR}:/home/www-data/.ssh
     restart: always
     cap_add:
       - SYS_PTRACE
@@ -123,6 +130,9 @@ services:
     container_name: yd_horizon
     hostname: yd_horizon
     working_dir: /www/wwwroot
+    user: www-data:www-data
+    # docker stop 往容器主进程发送的信号
+    stop_signal: SIGTERM
     volumes:
       - ${YD_API_WWWROOT_DIR}:/www/wwwroot/
       - ${SYS_DIR}:/renkxsys/
@@ -132,12 +142,12 @@ services:
       - ${COMPOSER_CACHE_DIR}:/tmp/composer/cache
       - ${COMPOSER_AUTH_JSON}:/tmp/composer/auth.json
       - ${COMPOSER_CONFIG_JSON}:/tmp/composer/config.json
-      - ${ROOT_GITCONFIG_FILE}:/root/.gitconfig
-      - ${ROOT_SSH_DIR}:/root/.ssh
+      - ${ROOT_GITCONFIG_FILE}:/home/www-data/.gitconfig
+      - ${ROOT_SSH_DIR}:/home/www-data/.ssh
     restart: always
     cap_add:
       - SYS_PTRACE
-    command: su -m www-data -c '/usr/local/bin/php /www/wwwroot/artisan horizon'
+    command: /usr/local/bin/php /www/wwwroot/artisan horizon
     networks:
       - default
 
