--- a/renkxservices/yd_horizon/Dockerfile
+++ b/renkxservices/yd_horizon/Dockerfile
@@ -15,6 +15,8 @@ RUN apk --no-cache add zsh git openssh vim
 RUN git clone https://gitee.com/renkx/ohmyzsh.git /home/www-data/.oh-my-zsh
 
 RUN mv /home/www-data/extra/zshrc /home/www-data/.zshrc \
+    && chown -R www-data:www-data /home/www-data \
+    && mkdir /tmp/composer && chown -R www-data:www-data /tmp/composer \
 	&& rm -rf /var/cache/apk/* /home/www-data/extra \
     # todo 最后需要删除zsh操作记录
     && rm -f /home/www-data/.zsh_history.new
