--- a/.env.renkx
+++ b/.env.renkx
@@ -111,7 +111,9 @@ YD_API_WWWROOT_DIR=~/code/app/yd/yd-api
 YD_API_PHP_CONF_FILE=./renkxservices/yd_api/php.ini
 YD_API_FPM_CONF_FILE=./renkxservices/yd_api/php-fpm.conf
 YD_API_LOG_DIR=../renkxlogs/yd_api
-YD_API_COMMAND=/usr/local/bin/php /www/wwwroot/artisan octane:start --host=0.0.0.0 --port=9000
+YD_API_START_SH=./renkxservices/yd_api/start.sh
+YD_API_HTTP_WORKERS=4
+YD_API_TASK_WORKERS=4
 
 #
 # 云鼎 crontab
