--- a/.env.renkx
+++ b/.env.renkx
@@ -120,13 +120,13 @@ YD_API_TASK_WORKERS=4
 #
 YD_CRONTAB_PHP_LOG_DIR=./renkxlogs/yd_crontab
 YD_CRONTAB_FILE=./renkxservices/yd_crontab/www-data
-YD_CRONTAB_SUPERVISOR_INI=./renkxservices/yd_crontab/crontab.ini
-YD_CRONTAB_SUPERVISOR_CONF_FILE=./renkxservices/yd_crontab/supervisord.conf
+YD_CRONTAB_START_SH=./renkxservices/yd_crontab/start.sh
 
 #
 # 云鼎 horizon
 #
 YD_HORIZON_PHP_LOG_DIR=./renkxlogs/yd_horizon
+YD_HORIZON_START_SH=./renkxservices/yd_horizon/start.sh
 
 #
 # yd_ws json配置
