--- a/renkxservices/yd_crontab/Dockerfile
+++ b/renkxservices/yd_crontab/Dockerfile
@@ -1,35 +1,33 @@
 # webapp 生成的 基础镜像
 FROM registry.cn-beijing.aliyuncs.com/kdd/php:php8-1.0
 
-# Install composer and change it's cache home
-RUN curl -o /usr/bin/composer https://mirrors.aliyun.com/composer/composer.phar \
-    && chmod +x /usr/bin/composer
-ENV COMPOSER_HOME=/tmp/composer
-
 # todo 设置扩展数据
 ADD ./renkxservices/extra  /home/www-data/extra
 
-################### todo 安装 supercronic
+    # todo 安装 supercronic
 ENV SUPERCRONIC_URL=https://gitee.com/renkx/supercronic/attach_files/1047315/download/supercronic-linux-amd64 \
     SUPERCRONIC=supercronic-linux-amd64 \
-    SUPERCRONIC_SHA1SUM=048b95b48b708983effb2e5c935a1ef8483d9e3e
+    SUPERCRONIC_SHA1SUM=048b95b48b708983effb2e5c935a1ef8483d9e3e \
+    # 设置composer 的 cache home
+    COMPOSER_HOME=/tmp/composer
 
-RUN curl -fsSLO "$SUPERCRONIC_URL" \
- && echo "${SUPERCRONIC_SHA1SUM}  ${SUPERCRONIC}" | sha1sum -c - \
- && chmod +x "$SUPERCRONIC" \
- && mv "$SUPERCRONIC" "/usr/local/bin/${SUPERCRONIC}" \
- && ln -s "/usr/local/bin/${SUPERCRONIC}" /usr/local/bin/supercronic
-################### todo 安装 supercronic
-
-# todo 安装 zsh 和 git 等
-RUN apk --no-cache add zsh git openssh vim busybox-suid
-
-RUN git clone https://gitee.com/renkx/ohmyzsh.git /home/www-data/.oh-my-zsh
-
-RUN mv /home/www-data/extra/zshrc /home/www-data/.zshrc \
+    # 安装composer
+RUN curl -o /usr/bin/composer https://mirrors.aliyun.com/composer/composer.phar \
+    && chmod +x /usr/bin/composer \
+    # todo 安装 supercronic
+    && curl -fsSLO "$SUPERCRONIC_URL" \
+    && echo "${SUPERCRONIC_SHA1SUM}  ${SUPERCRONIC}" | sha1sum -c - \
+    && chmod +x "$SUPERCRONIC" \
+    && mv "$SUPERCRONIC" "/usr/local/bin/${SUPERCRONIC}" \
+    && ln -s "/usr/local/bin/${SUPERCRONIC}" /usr/local/bin/supercronic \
+    # 安装必要的软件
+    && apk --no-cache add zsh git openssh vim busybox-suid \
+    # oh-my-zsh 安装
+    && git clone https://gitee.com/renkx/ohmyzsh.git /home/www-data/.oh-my-zsh \
+    && mv /home/www-data/extra/zshrc /home/www-data/.zshrc \
     && chown -R www-data:www-data /home/www-data \
-    && mkdir /tmp/composer && chown -R www-data:www-data /tmp/composer \
-	&& rm -rf /var/cache/apk/* /home/www-data/extra \
+    && mkdir ${COMPOSER_HOME} && chown -R www-data:www-data ${COMPOSER_HOME} \
+    && rm -rf /var/cache/apk/* /home/www-data/extra \
     # todo 最后需要删除zsh操作记录
     && rm -f /home/www-data/.zsh_history.new
 
