--- a/.env.renkx
+++ b/.env.renkx
@@ -107,7 +107,7 @@ PHP8_EXTENSIONS=pdo_mysql,mysqli,mbstring,gd,curl,opcache,redis,bcmath,soap,xsl,
 #
 # 云鼎 api
 #
-YD_API_WWWROOT_DIR=~/code/app/yd/yd-api
+YD_API_WWWROOT_DIR=~/code/app/yd/yd_api
 YD_API_PHP_CONF_FILE=./renkxservices/yd_api/php.ini
 YD_API_FPM_CONF_FILE=./renkxservices/yd_api/php-fpm.conf
 YD_API_LOG_DIR=../renkxlogs/yd_api
